--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+node_modules/
+bundle.js
+bundle.js.map
+.byebug_history
+.DS_Store
+npm-debug.log
