Update package json

--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "directories": {
     "test": "test"
   },
+  "engines": {
+    "node": "4.1.1",
+    "npm": "2.1.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --w"
+    "webpack": "webpack --w",
+    "postinstall":  "webpack"
   },
   "repository": {
     "type": "git",
