--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-modal": "^2.0.6",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.0",
     "redux": "^3.7.0",
