--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "redux": "^3.7.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "url-loader": "^0.5.9",
     "webpack": "^3.0.0"
+  },
+  "devDependencies": {
+    "url-loader": "^0.5.9"
   }
 }
